--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@
     border: 2px solid blue;
 }
 
-.COLOR-RED {
-    color: #faed27;
+.editor-container > .DraftEditor-root {
+    width: 100%;
+    height: 100%;
 }
